airflow_pipeline/logs/dag_id=GoldLayerDAG/run_id=scheduled__2023-12-14T00:00:00+00:00/task_id=create_gold_table/attempt=1.log
[2023-12-15T01:52:48.011-0300] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: GoldLayerDAG.create_gold_table scheduled__2023-12-14T00:00:00+00:00 [queued]>
[2023-12-15T01:52:48.020-0300] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: GoldLayerDAG.create_gold_table scheduled__2023-12-14T00:00:00+00:00 [queued]>
[2023-12-15T01:52:48.020-0300] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-12-15T01:52:48.047-0300] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_gold_table> on 2023-12-14 00:00:00+00:00
[2023-12-15T01:52:48.052-0300] {standard_task_runner.py:57} INFO - Started process 48745 to run task
[2023-12-15T01:52:48.056-0300] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'GoldLayerDAG', 'create_gold_table', 'scheduled__2023-12-14T00:00:00+00:00', '--job-id', '70', '--raw', '--subdir', 'DAGS_FOLDER/gold_layer_dag.py', '--cfg-path', '/tmp/tmpa90b1_tw']
[2023-12-15T01:52:48.058-0300] {standard_task_runner.py:85} INFO - Job 70: Subtask create_gold_table
[2023-12-15T01:52:48.163-0300] {task_command.py:416} INFO - Running <TaskInstance: GoldLayerDAG.create_gold_table scheduled__2023-12-14T00:00:00+00:00 [running]> on host JulioPC.
[2023-12-15T01:52:48.322-0300] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='GoldLayerDAG' AIRFLOW_CTX_TASK_ID='create_gold_table' AIRFLOW_CTX_EXECUTION_DATE='2023-12-14T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-12-14T00:00:00+00:00'
[2023-12-15T01:52:48.361-0300] {base.py:73} INFO - Using connection ID '***_default' for task execution.
[2023-12-15T01:52:48.386-0300] {sql.py:432} INFO - Running statement: 
    CREATE TABLE IF NOT EXISTS gold_layer_table (
        id SERIAL PRIMARY KEY,
        folder_name VARCHAR(255),
        refinement_date TIMESTAMP,
        file_name VARCHAR(255),
        file_data JSONB,
    );
    , parameters: None
[2023-12-15T01:52:48.393-0300] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/julioubuntu/Projects/EGD/airflow-trabalho-final/venv/lib/python3.9/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/julioubuntu/Projects/EGD/airflow-trabalho-final/venv/lib/python3.9/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/julioubuntu/Projects/EGD/airflow-trabalho-final/venv/lib/python3.9/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 8:     );
            ^

[2023-12-15T01:52:48.408-0300] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=GoldLayerDAG, task_id=create_gold_table, execution_date=20231214T000000, start_date=20231215T045248, end_date=20231215T045248
[2023-12-15T01:52:48.427-0300] {standard_task_runner.py:104} ERROR - Failed to execute job 70 for task create_gold_table (syntax error at or near ")"
LINE 8:     );
            ^
; 48745)
[2023-12-15T01:52:48.435-0300] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-12-15T01:52:48.447-0300] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2023-12-15T01:56:02.255-0300] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: GoldLayerDAG.create_gold_table scheduled__2023-12-14T00:00:00+00:00 [queued]>
[2023-12-15T01:56:02.265-0300] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: GoldLayerDAG.create_gold_table scheduled__2023-12-14T00:00:00+00:00 [queued]>
[2023-12-15T01:56:02.266-0300] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-12-15T01:56:02.296-0300] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_gold_table> on 2023-12-14 00:00:00+00:00
[2023-12-15T01:56:02.303-0300] {standard_task_runner.py:57} INFO - Started process 51836 to run task
[2023-12-15T01:56:02.312-0300] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'GoldLayerDAG', 'create_gold_table', 'scheduled__2023-12-14T00:00:00+00:00', '--job-id', '70', '--raw', '--subdir', 'DAGS_FOLDER/gold_layer_dag.py', '--cfg-path', '/tmp/tmpwozv4fxc']
[2023-12-15T01:56:02.325-0300] {standard_task_runner.py:85} INFO - Job 70: Subtask create_gold_table
[2023-12-15T01:56:02.420-0300] {task_command.py:416} INFO - Running <TaskInstance: GoldLayerDAG.create_gold_table scheduled__2023-12-14T00:00:00+00:00 [running]> on host JulioPC.
[2023-12-15T01:56:02.709-0300] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='GoldLayerDAG' AIRFLOW_CTX_TASK_ID='create_gold_table' AIRFLOW_CTX_EXECUTION_DATE='2023-12-14T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-12-14T00:00:00+00:00'
[2023-12-15T01:56:02.719-0300] {base.py:73} INFO - Using connection ID '***_default' for task execution.
[2023-12-15T01:56:02.785-0300] {sql.py:432} INFO - Running statement: 
    CREATE TABLE IF NOT EXISTS gold_layer_table (
        id SERIAL PRIMARY KEY,
        folder_name VARCHAR(255),
        refinement_date TIMESTAMP,
        file_name VARCHAR(255),
        file_data JSONB
    );
    , parameters: None
[2023-12-15T01:56:02.871-0300] {taskinstance.py:1400} INFO - Marking task as SUCCESS. dag_id=GoldLayerDAG, task_id=create_gold_table, execution_date=20231214T000000, start_date=20231215T045602, end_date=20231215T045602
[2023-12-15T01:56:02.926-0300] {local_task_job_runner.py:228} INFO - Task exited with return code 0
[2023-12-15T01:56:02.939-0300] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
